# laptimer_core

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  REUSE.toml  lint.sh  vcpkg-configuration.json  vcpkg.json
component/: CMakeLists.txt  README.md
db/: CMakeLists.txt  DatabaseFile.hpp.in  LibraryPath.hpp.in  schema.sql  track.sql
laptimer_core/: CMakeLists.txt
libs/positioning/: CMakeLists.txt  ConstantVelocityPositionDateTimeProvider.cpp  ConstantVelocityPositionDateTimeProvider.hpp  IPositionDateTimeProvider.hpp  StaticPositionDateTimeProvider.hpp
libs/rest/: CMakeLists.txt  GpsEndpoint.cpp  GpsEndpoint.hpp  IRestClient.hpp  IRestRequestHandler.hpp  IRestServer.hpp  Path.cpp  Path.hpp  RestCall.cpp  RestCall.hpp  RestRequest.cpp  RestRequest.hpp  RestServer.cpp  RestServer.hpp  SessionEndpoint.cpp  SessionEndpoint.hpp
libs/system/: AsyncResult.cpp  AsyncResult.hpp  CMakeLists.txt  DispatcherTypes.hpp  Event.cpp  Event.hpp  EventHandler.cpp  EventHandler.hpp  EventLoop.cpp  EventLoop.hpp  EventReceiver.hpp  FutureWatcher.hpp  IDispatcherObject.hpp  ISignalDispatcher.cpp  ISignalDispatcher.hpp  SignalDispatcher.cpp  SignalDispatcher.hpp  SystemTypes.hpp  Timer.cpp  Timer.hpp
libs/workflow/: ActiveSessionWorkflow.cpp  ActiveSessionWorkflow.hpp  CMakeLists.txt  IActiveSessionWorkflow.hpp  ISessionDownload.hpp  ISessionDownloadWorkflow.hpp  ISessionDownloader.hpp  ITrackDetectionWorkflow.hpp  RestSessionDownloader.cpp  RestSessionDownloader.hpp  TrackDetectionWorkflow.cpp  TrackDetectionWorkflow.hpp
programs/lappy_headless/: CMakeLists.txt  LappyHeadless.cpp  LappyHeadless.hpp  lappy_headless.cpp
programs/lappy_sessiondl/: CMakeLists.txt  CliOptions.cpp  CliOptions.hpp  LappySessionDownloader.cpp  LappySessionDownloader.hpp  MainWindowModel.cpp  MainWindowModel.hpp  lappy_sessiondl.cpp  lappy_sessiondl.json.in  resource.qrc
programs/lappy_shell/: ApplicationConfig.cpp  ApplicationConfig.hpp  ApplicationConfigReader.cpp  ApplicationConfigReader.hpp  ApplicationFinder.cpp  ApplicationFinder.hpp  ApplicationListModel.cpp  ApplicationListModel.hpp  ApplicationModel.cpp  ApplicationModel.hpp  CMakeLists.txt  LappyShell.cpp  LappyShell.hpp  LoggingCategories.hpp  lappy_shell.cpp
programs/lappy_ssd1322/: CMakeLists.txt
programs/laptimer_qt/: CMakeLists.txt
programs/laptimer_ssd1322/: CMakeLists.txt
programs/rapid_headless/: CMakeLists.txt  RapidHeadless.cpp  RapidHeadless.hpp  rapid_headless.cpp
programs/sessiondl/: CMakeLists.txt  CliOptions.cpp  MainWindowModel.cpp  MainWindowModel.hpp  RequestBuilder.cpp  RequestBuilder.hpp  SessionDl.cpp  SessionDl.hpp  sessiondl.cpp
src/: CMakeLists.txt
src/algorithm/: CMakeLists.txt
src/common/: CMakeLists.txt
src/positioning/: CMakeLists.txt
src/private/: CMakeLists.txt
src/rest/: CMakeLists.txt  GpsEndpoint.cpp  GpsEndpoint.hpp  Path.cpp  Path.hpp  RestGpsSource.hpp  RestRequest.cpp  RestRequest.hpp  SessionEndpoint.cpp  SessionEndpoint.hpp
src/session/: CMakeLists.txt
src/shell/: CMakeLists.txt
src/ssd1322shell/: CMakeLists.txt
src/storage/: CMakeLists.txt  FileSystemSessionDatabaseBackend.hpp  ISessionDatabaseBackend.hpp  ITrackDatabase.hpp  SqliteSessionDatabase.cpp  SqliteSessionDatabase.hpp  SqliteTrackDatabase.cpp  SqliteTrackDatabase.hpp
src/system/: AsyncResult.cpp  AsyncResult.hpp  CMakeLists.txt  FutureWatcher.cpp  FutureWatcher.hpp  IDispatcherObject.hpp  ISignalDispatcher.hpp  README.md  SignalDispatcher.cpp  SignalDispatcher.hpp  Timer.cpp  Timer.hpp
src/track_management/: CMakeLists.txt
src/workflow/: CMakeLists.txt
test/: CMakeLists.txt
test/algorithm/: CMakeLists.txt  test_SimpleLaptimer.cpp  test_TrackDetection.cpp
test/common/: CMakeLists.txt  test_Date.cpp  test_JsonDeserializer.cpp  test_JsonSerializer.cpp  test_LapData.cpp  test_PositionData.cpp  test_PositionDateTime.cpp  test_SessionData.cpp  test_Timer.cpp  test_Timestamp.cpp  test_TrackData.cpp
test/dummy/: CMakeLists.txt  Laptimer.cpp  Laptimer.hpp  MemorySessionDatabaseBackend.cpp  MemorySessionDatabaseBackend.hpp  PositionDateTimeProvider.hpp  PositionInformationProvider.cpp  PositionInformationProvider.hpp  Positions.cpp  Positions.hpp  Sessions.cpp  Sessions.hpp  SqliteDatabaseTestHelper.cpp  SqliteDatabaseTestHelper.hpp  Tracks.cpp  Tracks.hpp
test/positioning/: test_ConstantVelocityPostionDateTimeProvider.cpp
test/rest/: CMakeLists.txt  test_GpsEndpoint.cpp  test_Path.cpp  test_SessionEndpoint.cpp
test/restgpssource/: CMakeLists.txt  test_RestGpsSource.cpp
test/session/: CMakeLists.txt  test_FileSystemSessionDatabaseBackend.cpp  test_SessionDatabase.cpp  test_SqliteSessionDatabase.cpp
test/sessiondl/: CMakeLists.txt
test/storage/: test_FileSystemSessionDatabaseBackend.cpp  test_SqliteSessionDatabase.cpp
test/system/: CMakeLists.txt  test_AsyncResult.cpp  test_FutureWatcher.cpp  test_SignalDispatcher.cpp  test_Timer.cpp
test/testhelper/: CMakeLists.txt  Laptimer.cpp  Laptimer.hpp  MemorySessionDatabaseBackend.cpp  MemorySessionDatabaseBackend.hpp  PositionDateTimeProvider.hpp  Positions.cpp  Positions.hpp  Sessions.cpp  Sessions.hpp  Tracks.cpp  Tracks.hpp
test/trackmanagement/: CMakeLists.txt  test_SqliteTrackDatabase.cpp
test/workflow/: CMakeLists.txt  test_ActiveSessionWorkflow.cpp  test_TrackDetectionWorkflow.cpp
tests/: CMakeLists.txt
tests/algorithm/: CMakeLists.txt  test_SimpleLaptimer.cpp  test_TrackDetection.cpp
tests/common/: CMakeLists.txt  test_Date.cpp  test_GlobalSettingsReader.cpp  test_GpsPositionData.cpp  test_JsonDeserializer.cpp  test_JsonSerializer.cpp  test_LapData.cpp  test_PositionDateTime.cpp  test_SharedDataPointer.cpp  test_Timestamp.cpp  test_VelocityData.cpp
tests/lappy_shell/: CMakeLists.txt  ValidAppConfig.json  test_ApplicationConfigReader.cpp  test_ApplicationListModel.cpp  test_ApplicationModel.cpp  test_ApplicationVersion.cpp  test_FilePath.hpp.in  test_GlobalSettingsWriter.cpp
tests/positioning/: CMakeLists.txt  test_ConstantGpsPositionProvider.cpp  test_ConstantVelocityPostionDateTimeProvider.cpp
(+665 files in other folders)
